Prevent the date string from being broken into multilines.

--- a/client/me/purchases/manage-purchase/style.scss
+++ b/client/me/purchases/manage-purchase/style.scss
@@ -292,3 +292,7 @@
 		padding: 16px 24px;
 	}
 }
+
+.manage-purchase__detail-date-span {
+	white-space: nowrap;
+}
